--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Este é o meu primeiro paragrafo</h1>
     <h2>Segundo paragrafo</h2>
+    <p>Isso é um paragrafo</p>
 </body>
 </html>
